2016-12-24 gyunaev <gyunaev@ulduzsoft.com>
  - Added support for importing KaraokeBuilder lyric files (thanks Ivan for providing examples).
  - Switched to QAudioOutput instead of SDL, and thus got rid of SDL use.

2016-12-23 gyunaev <gyunaev@ulduzsoft.com>
  - Made "test lyrics" button reload lyrics without restarting the song (thx Dario Abatianni)
  - Fixed compilating using modern FFmpeg
  - Added a button on the test window to find the start timing mark for the currently played lyrics. Based on Dario Abatianni idea.
  - When incorrect timing sequence is detected, we now print not just the line number, but also the timing mark value.
  - When exporting CDG/Video, the editor now remembers the exported CDG and video file names.
  - Added commands to change the block text vertical alignment: @%T for top, @%M for middle, @%B for bottom; thanks Dario Abatianni
  - Added highlighting for special character sequences starting with @. Patch by Dario Abatianni.

2015-12-13 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 2.0
  - Added option to enable or disable font anti-aliasing for CD+G export
  - Added option to switch back to default background (use { DEFAULT } ), and to set background to a specific color
  - Added Qt5 support
  
2014-01-09 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.11
  - Webm video export fixed

2013-12-20 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.10
  - Video export offers more options now
  
2013-11-10 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.9
  - Fixed jittering sound output when a newer version of ffmped is installed;
  - Fixed reversed Artist and Title fields in the CD+G export dialog;
  - Fixed the registration dialog which didn't pop up;
  - Fixed the "missing LRC header" error while importing KFN lyrics via "Import lyrics" menu
  - When a new project is created the editor now will try to read the meta tags and fill up the Artist, Title and Album automatically.

